# sudoku

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  bilocationlink.cpp  bilocationlink.h  cell.cpp  cell.h  cellcolor.h  coord.cpp  coord.h  field.cpp  field.h  house.cpp  house.h  main.cpp  sudoku  sudoku.pro
libsudoku/: CMakeLists.txt  bilocationlink.cpp  bilocationlink.h  cell.cpp  cell.h  cellcolor.cpp  cellcolor.h  coord.cpp  coord.h  field.cpp  field.h  house.cpp  house.h  libsudoku.pro  libsudoku_global.h  resolver.cpp  resolver.h  technique.cpp  technique.h
puzzle/: 16x16.sdm  25x25.sdm  coloring.sdm  hidden-single.sdm  hidden_group.sdm  input.fsdm  input.sdm  naked-single.sdm  naked_group.sdm  unique_rectangle_type1.sdm  unique_rectangle_type2.sdm  unique_rectangle_type3.sdm  unsolveable.sdm  x-wing.sdm  xyz-wing.sdm  ywing.sdm
src/: CMakeLists.txt  cell.cpp  cell.h  coord.cpp  coord.h  field.cpp  field.h  fieldgui.cpp  fieldgui.h  house.cpp  main.cpp  src.pro
tests/: CMakeLists.txt  resource.qrc  test_cell.cpp  test_coord.cpp  tests.cpp  tests.pro  unit_tests.cpp
